--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Bird Nerd</title>
   </head>
   <body>
-    <div id="root"></div>
+    Login
+    <form method="POST" action='/login'>
+      <input name="username" type="text" placeholder="username"></input>
+      <input name="password" type="password" placeholder="password"></input>
+      <input type='submit' value="login">
+    </form>
+    <a href='./signup'>Sign up</a>
   </body>
-</html>
+  </html>
