--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,11 @@
-<<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bird Nerd</title>
   </head>
   <body>
-    Login
-    <form method="POST" action='/login'>
-      <input name="username" type="text" placeholder="username"></input>
-      <input name="password" type="password" placeholder="password"></input>
-      <input type='submit' value="login">
-    </form>
-    <a href='./signup'>Sign up</a>
+    <div id="root"></div>
   </body>
-  </html>
+</html>
